# compiler-c-sandler

./: .gitignore  .rustfmt.toml  .rusty-hook.toml  Cargo.toml  readme.md
src/: asm_codeemission.rs  asm_codegen.rs  driver.rs  files.rs  lexer.rs  lib.rs  parser.rs  stage1_lexer.rs  stage2_parser.rs  stage2a_parser.rs  stage2b_validate.rs  stage3_tacky.rs  stage4_asm_gen.rs  stage5_asm_emit.rs  symbol_table.rs  symbol_table_backend.rs  symbol_table_frontend.rs  tacky.rs  types_backend.rs  types_frontend.rs
src/common/: identifier.rs  mod.rs  primitive.rs  symbol_table_backend.rs  symbol_table_frontend.rs  types_backend.rs  types_frontend.rs
src/driver/: config.rs  files.rs
src/ds_n_a/: immutable_owned.rs  mod.rs  nonempty.rs  phantom_marker.rs  singleton.rs  weak_ptr.rs  witness.rs
src/ds_n_a/singleton/: test.rs
src/stage1_lex/: lexer.rs  tokens.rs
src/stage2_parse/: c_ast.rs  c_ast_resolved.rs  ident_resolver.rs  mod.rs  phase1_parse.md  phase1_parse.rs  phase2_resolve.rs  phase3_typecheck.rs
src/stage2_parse/phase1_parse/: binary_operator.rs  decl.rs  decl_init.rs  ebnf.md  exp.rs  stmt.rs
src/stage2_parse/phase2_resolve/: ident_resolver.rs
src/stage2_parse/phase3_typecheck/: casting.rs  decl_fun.rs  decl_var.rs  decl_var_init.rs  exp.rs  exp_binary.rs  exp_cast.rs  exp_misc.rs  exp_obj.rs  obj.rs
src/stage3_tacky/: generate.rs  mod.rs  tacky_ast.rs
src/stage3_tacky/generate/: ary.rs  conditional.rs  defn.rs  exp.rs  (+5 more)
src/stage4_asm_gen/: asm_ast.rs  functions.md  generate.rs  mod.rs  phase1_generate.rs  phase2_finalize.rs  phase3_fix.rs
src/stage5_asm_emit/: emit.rs
src/test/: basic.rs  fun_call.rs  mod.rs  parse_type.rs  ptr.rs  static_obj.rs
(+22 files in other folders)
