[package]
name = "compiler-c-sandler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
derivative = "2.2.0"
derive_more = "0.99.17"
env_logger = "0.11.3"
getset = "0.1.2"
lazy_static = "1.4.0"
log = "0.4.21"
regex = "1.10.4"

[dev-dependencies]
rusty-hook = "0.11.2"

[lints.clippy]
bool_comparison = "allow"
len_zero = "allow"
needless_return = "allow"
neg_multiply = "allow"
