[package]
name = "compiler-c-sandler"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
derivative = "2.2.0"
derive_more = "0.99.17"
duct = "0.13.7"
env_logger = "0.11.3"
getset = "0.1.2"
log = "0.4.21"
owning_ref = "0.4.1"
regex = "1.10.4"

[dev-dependencies]
rusty-hook = "0.11.2"

[lints.clippy]
bool_comparison = "allow"
comparison_to_empty = "allow"
len_zero = "allow"
let_and_return = "allow"
needless_return = "allow"
neg_multiply = "allow"