[package]
name = "compiler-c-sandler"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
clap = { version = "4.5.30", features = ["derive"] }
derivative = "2.2.0"
derive_more = { version = "2.0.1", features = ["full"] }
duct = "0.13.7"
env_logger = "0.11.6"
getset = "0.1.4"
log = "0.4.25"
owning_ref = "0.4.1"
regex = "1.11.1"

[dev-dependencies]
rusty-hook = "0.11.2"

[lints.clippy]
bool_comparison = "allow"
comparison_to_empty = "allow"
len_zero = "allow"
let_and_return = "allow"
needless_late_init = "allow"
needless_return = "allow"
neg_multiply = "allow"
